--- a/sigma.css
+++ b/sigma.css
@@ -11,11 +11,13 @@ html {
     
     
     background-color: #07575B;
-    height: 200px;
+    height: 100px;
     margin: 10px;
     padding-top: 5px;
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+    flex-grow: 1;
 }
 .nav-bar ul {
     display: inline-block;
@@ -25,4 +27,12 @@ html {
     margin: 0px 5px 5px 5px ;
     color: aliceblue;
     border: 3px solid;
+    list-style: none;
+    display: flex;
+    justify-content: space-evenly;
+    gap: 30px;
+    width: 100%;
+    align-items: center;
+    align-content: center;
+    font-size: 40px;
 }
